--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "fcshy",
-    "homepage": "http://kolesnikantony.github.io/ReactSocialNet",
+    "homepage": "https://kolesnikantony.github.io/ReactSocialNet",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
