--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fcshy",
+    "name": "ReactSocialNet",
     "homepage": "https://kolesnikantony.github.io/ReactSocialNet",
     "version": "0.1.0",
     "private": true,
