--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
+        "@types/jest": "^26.0.20",
+        "@types/node": "^14.14.21",
+        "@types/react": "^17.0.0",
+        "@types/react-dom": "^17.0.0",
         "axios": "^0.21.0",
         "gh-pages": "^3.1.0",
         "react": "^17.0.1",
@@ -16,6 +20,7 @@
         "redux": "^4.0.5",
         "redux-form": "^8.3.7",
         "redux-thunk": "^2.3.0",
+        "typescript": "^4.1.3",
         "web-vitals": "^0.2.4"
     },
     "scripts": {
