--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/node": "^14.14.21",
         "@types/react": "^17.0.0",
         "@types/react-dom": "^17.0.0",
+        "@types/redux-form": "^8.3.1",
         "axios": "^0.21.0",
         "gh-pages": "^3.1.0",
         "react": "^17.0.1",
